--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "dev": "npm-run-all -p start-backend start-frontend",
     "start-backend": "cd server && nodemon app.js",
     "start-frontend": "cd client && PORT=3001 npm start"
+  },
+  "dependencies": {
+    "react-router-dom": "^6.22.1"
   }
 }
