--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/auddin3/emplify#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^5.0.0",
+    "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "cors": "^2.8.5",
