--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^5.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
