--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth-kit/react-router": "^3.1.2",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
+    "react-auth-kit": "^3.1.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
