--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start-frontend": "cd client && PORT=3001 npm start"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "jsonwebtoken": "^9.0.2",
     "react-router-dom": "^6.22.1"
   }
 }
