--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "lint-fix": "npx eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -18,10 +20,17 @@
   },
   "homepage": "https://github.com/auddin3/emplify#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "cors": "^2.8.5",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "nodemon": "^3.0.3"
   }
 }
