--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "bson": "^6.3.0",
     "cors": "^2.8.5",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
