--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
     "@testing-library/react": "^13.4.0",
+    "chart.js": "^4.4.2",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.2",
