--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.3",
     "npm-run-all": "^4.1.5"
