--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "jest": "^29.7.0",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.3",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "supertest": "^7.0.0"
   },
   "scripts": {
     "dev": "npm-run-all -p start-backend start-frontend",
