--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "bson": "^6.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
