--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/auddin3/emplify#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^8.7.2"
   },
