--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "jest": "^29.7.0",
     "mongodb": "^6.3.0",
@@ -11,7 +12,8 @@
   "scripts": {
     "dev": "npm-run-all -p start-backend start-frontend",
     "start-backend": "cd server && nodemon app.js",
-    "start-frontend": "cd client && PORT=3001 npm start"
+    "start-frontend": "cd client && cross-env PORT=3001 npm start"
+
   },
   "dependencies": {
     "body-parser": "^1.20.2",
